--- a/webapp/package.json
+++ b/webapp/package.json
@@ -25,6 +25,8 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
+    "react-window-infinite-loader": "^1.0.7",
     "redux": "^4.1.0",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
@@ -32,6 +34,7 @@
     "regenerator-runtime": "^0.13.7",
     "tsyringe": "^4.5.0",
     "typeface-roboto": "1.1.13",
+    "use-context-selector": "^1.3.7",
     "use-debounce": "^6.0.1",
     "web-vitals": "^2.0.1",
     "yup": "^0.32.9"
@@ -73,6 +76,7 @@
     "@types/react-dom": "^17.0.5",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-table": "^7.7.1",
     "@types/yup": "^0.29.11",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.1",
