--- a/webapp/package.json
+++ b/webapp/package.json
@@ -24,6 +24,7 @@
     "openapi-typescript": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.3",
     "react-query": "^3.16.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
