--- a/webapp/package.json
+++ b/webapp/package.json
@@ -23,6 +23,8 @@
     "notistack": "^1.0.9",
     "openapi-typescript": "^4.0.0",
     "react": "^17.0.1",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.3",
     "react-query": "^3.16.1",
