feat(Editor): add editor and better navigation

--- a/webapp/package.json
+++ b/webapp/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@formatjs/icu-messageformat-parser": "^2.0.7",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@monaco-editor/react": "^4.2.1",
     "@sentry/browser": "^6.5.1",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
@@ -17,6 +19,7 @@
     "clsx": "^1.1.1",
     "formik": "^2.2.9",
     "formik-material-ui": "^3.0.1",
+    "monaco-editor": "^0.25.2",
     "notistack": "^1.0.9",
     "openapi-typescript": "^4.0.0",
     "react": "^17.0.1",
@@ -25,8 +28,6 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-table": "^7.7.0",
-    "react-window-infinite-loader": "^1.0.7",
     "redux": "^4.1.0",
     "redux-promise-middleware": "^6.1.2",
     "redux-thunk": "^2.3.0",
