--- a/webapp/package.json
+++ b/webapp/package.json
@@ -27,6 +27,7 @@
     "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.3",
+    "react-list": "^0.8.16",
     "react-query": "^3.16.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
@@ -78,6 +79,7 @@
     "@types/node": "^15.12.2",
     "@types/react": "^17.0.9",
     "@types/react-dom": "^17.0.5",
+    "@types/react-list": "^0.8.5",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-table": "^7.7.1",
