feat: Activity - Storing to database with meta

--- a/backend/app/src/main/resources/application.yaml
+++ b/backend/app/src/main/resources/application.yaml
@@ -16,6 +16,9 @@ spring:
         order_inserts: true
         order_updates: true
         dialect: io.tolgee.dialects.postgres.CustomPostgreSQLDialect
+        types:
+          print:
+            banner: false
 #  main:
 #    lazy-initialization: true
 tolgee:
