--- a/backend/data/build.gradle
+++ b/backend/data/build.gradle
@@ -103,7 +103,8 @@ liquibase {
                     "table:batch_job_execution," +
                     "table:batch_job_execution_params," +
                     "hibernate_sequence," +
-                    "revision_sequence_generator"
+                    "revision_sequence_generator," +
+                    "activity_sequence"
         }
     }
 }
@@ -199,6 +200,8 @@ dependencies {
     implementation 'jaxen:jaxen:1.2.0'
     compile "com.sendinblue:sib-api-v3-sdk:5.3.0"
     implementation "io.sentry:sentry-spring-boot-starter:${findProperty("sentryVersion")}"
+    implementation "com.vladmihalcea:hibernate-types-55:2.14.1"
+    liquibaseRuntime "com.vladmihalcea:hibernate-types-55:2.14.1"
 
     /**
      * Google translation API
