--- a/backend/app/build.gradle
+++ b/backend/app/build.gradle
@@ -86,6 +86,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-validation"
     implementation "org.springframework.boot:spring-boot-starter-hateoas"
     implementation "org.springframework.boot:spring-boot-configuration-processor"
+    implementation "org.springframework.boot:spring-boot-starter-websocket"
     kapt "org.springframework.boot:spring-boot-configuration-processor"
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation("org.springframework.ldap:spring-ldap-core")
