fix: Billing - handling credits, WIP check on key/language adding

--- a/gradle/liquibase.gradle
+++ b/gradle/liquibase.gradle
@@ -31,7 +31,8 @@ ext {
                             "table:batch_job_execution," +
                             "table:batch_job_execution_params," +
                             "hibernate_sequence," +
-                            "revision_sequence_generator"
+                            "revision_sequence_generator," +
+                            "billing_sequence"
                 }
             }
         }
